Related: fdo#59638 DOCX import of w:lvlOverride

Change-Id: I23fca674e2436b09eeea3337b4d3eeb7a33ccf09